<resources>
    <string name="app_name">Hound</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="control_fragment_label">Mellow Hound</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <!-- -->
    <string name="running">Running</string>
    <string name="stopped">Stopped</string>
    <string name="uploading">uploading</string>
    <string name="unknown">Unknown</string>

    <string name="label_run_mode">Run Mode:</string>
    <string name="label_scan_file">Scan/Files:</string>

    <string name="button_main_fragment">Show Main</string>
    <string name="button_list_fragment">Show List</string>
    <string name="button_start_collection">Start</string>
    <string name="button_stop_collection">Stop</string>
    <string name="button_upload">Upload</string>
</resources>